// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`factory#parse composed modifiers throw error if compose and loose modifiers are mixed 1`] = `
"Entity \\"hash:invalid\\" is invalid; when \\"compose\\" is defined the keys: mapKeys should be inside compose.
For more info: https://github.com/ViacomInc/data-point/tree/master/packages/data-point#entity-compose-reducer"
`;

exports[`factory#parse composed modifiers throw error if compose non array 1`] = `
"Entity \\"hash:invalid\\" compose property is expected to be an instance of Array, but found: {}
For more info: https://github.com/ViacomInc/data-point/tree/master/packages/data-point#entity-compose-reducer"
`;

exports[`factory#parse composed modifiers throw error if modifier is invalid 1`] = `"Modifier 'invalidKey' in \\"hash:invalid\\" does not match any of the valid modifiers: omitKeys, pickKeys, mapKeys, addValues, addKeys"`;
